[workspace]
members = ["lib", "program", "script"]
resolver = "2"

[workspace.dependencies]
hex = "0.4"
sha3 = "=0.10.8"
sp1-zkvm = "4.0.0"
chacha20 = "0.9.1"

chacha-lib = { path = "lib", default-features = false }

[patch.crates-io]
sha3-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
