[workspace]
members = ["lib", "program", "script"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
hex = "0.4"
sha2 = "=0.10.8"
sp1-zkvm = "4.0.0"
chacha20 = "0.9.1"

chacha-lib = { path = "lib", default-features = false }

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
